Fix Sensor data and Device relationship

--- a/Smart_Home_IoT_Device_Management_API.csproj
+++ b/Smart_Home_IoT_Device_Management_API.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Folder Include="Application\Validators\" />
     <Folder Include="Domain\Common\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Tests\" />
   </ItemGroup>
 
